--- a/src/main/webapp/sistema/Voluntario/visualizarVagas.xhtml
+++ b/src/main/webapp/sistema/Voluntario/visualizarVagas.xhtml
@@ -149,7 +149,7 @@
 						<h:outputText value="" />
 						<p:rating value="#{editarVaga.vaga.avaliacaoVaga.avaliacao}" />
 						<p:commandButton value="Avaliar Vaga" id="commandButton-curtir"
-							icon="ui-icon-like" action="#{editarVaga.avaliarVaga}" />
+							action="#{editarVaga.avaliarVaga}" />
 
 					</p:panelGrid>
 				</p:outputPanel>
