--- a/src/main/webapp/sistema/Voluntario/editarDoacao.xhtml
+++ b/src/main/webapp/sistema/Voluntario/editarDoacao.xhtml
@@ -15,17 +15,24 @@
 		<p:tabView style="width:50% ;margin:auto;">
 			<p:tab title="Editar Cadastro de Objeto para Doação">
 
+				<h:form id="form-excluir-doacao" enctype="multipart/form-data">
+
+					<p:commandButton value="Excluir Doaçãi" id="commandButton-excluir"
+						icon="ui-icon-gear" action="#{editarDoacao.removerDoacao}"
+						ajax="false" />
+
+				</h:form>
+
 				<h:form enctype="multipart/form-data">
 
 					<h:panelGrid id="panelGrid-campos-form" columns="2"
 						cellpadding="10">
 
 						<p:outputLabel value="Titulo da doação" for="inputText-titulo" />
-						<p:inplace  id="inputText-titulo" editor="true"
+						<p:inplace id="inputText-titulo" editor="true"
 							emptyLabel="Clique para editar">
-							<p:inputText style="width:100%"
-								maxlength="80" value="#{editarDoacao.doacao.titulo}"
-								required="true"
+							<p:inputText style="width:100%" maxlength="80"
+								value="#{editarDoacao.doacao.titulo}" required="true"
 								requiredMessage="O titulo da vaga é de preenchimento obrigatório" />
 						</p:inplace>
 
@@ -33,9 +40,8 @@
 							for="inputText-descricao" />
 						<p:inplace id="inputText-descricao" editor="true"
 							emptyLabel="Clique para editar">
-							<p:inputTextarea rows="6" cols="33" 
-								style="width:100%" maxlength="80"
-								value="#{editarDoacao.doacao.descricao}"
+							<p:inputTextarea rows="6" cols="33" style="width:100%"
+								maxlength="80" value="#{editarDoacao.doacao.descricao}"
 								required="true"
 								requiredMessage="O campo descrição é de preenchimento obrigatório" />
 						</p:inplace>
@@ -46,8 +52,7 @@
 
 						<p:outputLabel value="Disponibilidade para retirada:" />
 						<p:selectManyCheckbox id="dias"
-							value="#{editarDoacao.doacao.dias}" layout="grid"
-							columns="2">
+							value="#{editarDoacao.doacao.dias}" layout="grid" columns="2">
 							<f:selectItem itemLabel="Segunda-Feira" itemValue="1" />
 							<f:selectItem itemLabel="Terça-Feira" itemValue="2" />
 							<f:selectItem itemLabel="Quarta-Feira" itemValue="3" />
@@ -60,8 +65,7 @@
 						<p:outputLabel value="Periodo" />
 
 						<p:selectManyCheckbox id="periodos"
-							value="#{editarDoacao.doacao.periodos}" layout="grid"
-							columns="3">
+							value="#{editarDoacao.doacao.periodos}" layout="grid" columns="3">
 							<f:selectItem itemLabel="Manha" itemValue="0" />
 							<f:selectItem itemLabel="Tarde" itemValue="1" />
 							<f:selectItem itemLabel="Noite" itemValue="2" />
@@ -72,9 +76,6 @@
 							action="#{editarDoacao.editarDoacao}"
 							update="panelGrid-campos-form" ajax="false" />
 
-						<p:commandButton value="Excluir objeto" id="commandButton-excluir"
-							icon="ui-icon-gear" action="#{editarDoacao.removerDoacao}"
-							update="panelGrid-campos-form" ajax="false" />
 
 					</h:panelGrid>
 
