--- a/src/main/webapp/sistema/ONG/editarVaga.xhtml
+++ b/src/main/webapp/sistema/ONG/editarVaga.xhtml
@@ -19,7 +19,7 @@
 				<h:form id="form-excluir-vaga" enctype="multipart/form-data">
 
 					<p:commandButton value="Excluir vaga" id="commandButton-excluir"
-						icon="ui-icon-gear" action="#{editarVaga.removerVaga}"
+						icon="fa fa-fw fa-remove" action="#{editarVaga.removerVaga}"
 						ajax="false" />
 
 				</h:form>
@@ -142,7 +142,7 @@
 						</p:selectOneRadio>
 
 						<p:commandButton value="Salvar alterações"
-							id="commandButton-salvar" icon="ui-icon-gear"
+							id="commandButton-salvar" icon="fa-save"
 							action="#{editarVaga.editarVaga}" update="panelGrid-campos-form"
 							ajax="false" />
 
