--- a/src/main/webapp/sistema/Voluntario/editarDoacao.xhtml
+++ b/src/main/webapp/sistema/Voluntario/editarDoacao.xhtml
@@ -17,8 +17,8 @@
 
 				<h:form id="form-excluir-doacao" enctype="multipart/form-data">
 
-					<p:commandButton value="Excluir Doaçãi" id="commandButton-excluir"
-						icon="ui-icon-gear" action="#{editarDoacao.removerDoacao}"
+					<p:commandButton value="Excluir Doação" id="commandButton-excluir"
+						icon="fa fa-fw fa-remove" action="#{editarDoacao.removerDoacao}"
 						ajax="false" />
 
 				</h:form>
@@ -72,7 +72,7 @@
 						</p:selectManyCheckbox>
 
 						<p:commandButton value="Salvar alterações"
-							id="commandButton-salvar" icon="ui-icon-gear"
+							id="commandButton-salvar" icon="fa-save"
 							action="#{editarDoacao.editarDoacao}"
 							update="panelGrid-campos-form" ajax="false" />
 
