--- a/src/main/webapp/sistema/Voluntario/editarEvento.xhtml
+++ b/src/main/webapp/sistema/Voluntario/editarEvento.xhtml
@@ -19,7 +19,7 @@
 				<h:form id="form-excluir-evento" enctype="multipart/form-data">
 
 					<p:commandButton value="Excluir Evento" id="commandButton-excluir"
-						style="float: right;" icon="ui-icon-gear"
+						style="float: right;" icon="fa fa-fw fa-remove"
 						action="#{editarEvento.removerEvento}" ajax="false" />
 
 				</h:form>
@@ -110,7 +110,7 @@
 						<br />
 
 						<p:commandButton value="Salvar Evento" id="commandButton-salvar"
-							icon="ui-icon-gear" action="#{editarEvento.editarEvento}"
+							icon="fa-save" action="#{editarEvento.editarEvento}"
 							update="panelGrid-campos-form" ajax="false" />
 
 					</h:panelGrid>
