--- a/src/main/webapp/sistema/Voluntario/visualizarEventos.xhtml
+++ b/src/main/webapp/sistema/Voluntario/visualizarEventos.xhtml
@@ -129,7 +129,7 @@
 
 						<h:outputText value=" " />
 						<h:outputText value=" " />
-						<p:button value="Editar" outcome="editarEvento.xhtml"
+						<p:button value="Editar" outcome="editarEvento.xhtml" icon="fa fa-fw fa-edit"
 							disabled="#{!(consultaEventosView.botaoEditar)}">
 						</p:button>
 						<h:outputText value=" " />
